# fcitx-configtool

./: .gitignore  .hgignore  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  README  autogen.sh  clang-format.sh  config.h.in  configure.in
cmake/: fcitx-extract-glade.sh  gresource.cmake
data/: CMakeLists.txt  Makefile.am  fcitx-config  fcitx-config-gtk.desktop.in  fcitx-config.desktop  fcitx-configtool.desktop.in
debian/: Makefile.am  changelog  control  copyright  rules
gtk/: CMakeLists.txt  Makefile.am  POTFILES.in  addon_stuff.c  addon_stuff.h  common.h  config_widget.c  config_widget.h  configdesc.c  configdesc.h  gdm-languages.c  gdm-languages.h  im.c  im.h  im_widget.c  im_widget.h  keygrab.c  keygrab.h  locarchive.h  main.c  main_window.c  main_window.h  menu.c  menu.h  skin_stuff.c  skin_stuff.h  sub_config_parser.c  sub_config_parser.h  sub_config_widget.c  sub_config_widget.h  table_stuff.c  table_stuff.h  xdg.c  xdg.h
gtk3/: CMakeLists.txt  common.c  common.h  config_widget.c  config_widget.h  dummy_config.c  dummy_config.h  fcitx-config-gtk3.gresource.xml  fcitx-config-wizard-gtk3.gresource.xml  gdm-languages.c  gdm-languages.h  i18n_dummy.c  im.c  im_config_dialog.c  im_config_dialog.h  im_dialog.c  im_dialog.h  im_dialog.ui  im_widget.c  im_widget.h  im_widget.ui  keygrab.c  keygrab.h  locarchive.h  main.c  main_window.c  main_window.h  sub_config_parser.c  sub_config_parser.h  sub_config_widget.c  sub_config_widget.h  ui_widget.c  ui_widget.h  wizard_assistant_window.c  wizard_assistant_window.h  wizard_candidate_widget.c  wizard_candidate_widget.h  wizard_conf_data.h  wizard_hotkey_widget.c  wizard_hotkey_widget.h  (+9 more)
icons/: CMakeLists.txt  Makefile.am
kde/: CMakeLists.txt  FcitxAddonSelector.cpp  FcitxAddonSelector.h  FcitxAddonSelector_p.h  FcitxConfigPage.cpp  FcitxConfigPage.h  Module.cpp  Module.h  Module.ui  kcm_fcitx.desktop
po/: CMakeLists.txt  ChangeLog  POTFILES.in  POTFILES.in.in  ca.po  da.po  de.po  fcitx-config.pot  fcitx-configtool.pot  ja.po  ko.po  ru.po  srcfiles.cmake  tr.po  zh_CN.po  zh_TW.po
po/gtk/: zh_CN.po
po/kde/: CMakeLists.txt  Messages.sh  kcm_fcitx.pot  zh_CN.po
