#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_SRCDIR([gtk/main.c])
AM_INIT_AUTOMAKE(fcitx-config, "0.1.2")

AC_CANONICAL_HOST
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AM_ICONV

ALL_LINGUAS="zh_CN"
GETTEXT_PACKAGE=fcitx-config
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
AC_PROG_INTLTOOL([0.35.0])
AM_GNU_GETTEXT([external])

# Checks for libraries.
PKG_CHECK_MODULES([GTK2], [gtk+-2.0 >= 2.10.0, gthread-2.0, gmodule-export-2.0])

AC_SUBST(GTK2_LIBS)
AC_SUBST(GTK2_CFLAGS)

PKG_CHECK_MODULES(FCITX_CONFIG, fcitx-config)
AC_SUBST(FCITX_CONFIG_LIBS)
AC_SUBST(FCITX_CONFIG_CFLAGS)

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([limits.h malloc.h malloc/malloc.h stdlib.h string.h sys/param.h unistd.h wait.h sys/wait.h machine/endian.h pthread.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([memmove memset mkdir setlocale strcasecmp strstr strtol asprintf vasprintf])

AC_CONFIG_FILES([
                 Makefile
                 gtk/Makefile
                 data/Makefile
                 icons/Makefile
                 debian/Makefile
                 po/Makefile.in
                 ])

AC_OUTPUT
