icons_DATA = \
			 $(NULL)

iconsdir = $(pkgdatadir)/icons

hicolor_icon_16_DATA = \
					   16/fcitx-config.png \
					   $(NULL)
hicolor_icon_16dir= $(datadir)/icons/hicolor/16x16/apps/

hicolor_icon_22_DATA = \
					   22/fcitx-config.png \
					   $(NULL)
hicolor_icon_22dir= $(datadir)/icons/hicolor/22x22/apps/

hicolor_icon_24_DATA = \
					   24/fcitx-config.png \
					   $(NULL)
hicolor_icon_24dir= $(datadir)/icons/hicolor/24x24/apps/

hicolor_icon_32_DATA = \
					   32/fcitx-config.png \
					   $(NULL)
hicolor_icon_32dir= $(datadir)/icons/hicolor/32x32/apps/

hicolor_icon_48_DATA = \
					   48/fcitx-config.png \
					   $(NULL)
hicolor_icon_48dir= $(datadir)/icons/hicolor/48x48/apps/

hicolor_icon_128_DATA = \
							 128/fcitx-config.png \
							 $(NULL)
hicolor_icon_128dir= $(datadir)/icons/hicolor/128x128/apps/

EXTRA_DIST = \
			 $(icons_DATA) \
			 $(hicolor_icon_16_DATA) \
			 $(hicolor_icon_22_DATA) \
			 $(hicolor_icon_24_DATA) \
			 $(hicolor_icon_32_DATA) \
			 $(hicolor_icon_48_DATA) \
			 $(hicolor_icon_128_DATA) \
			 $(NULL)
